# aws-microservices

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/app/: __init__.py
tests/unit/: __init__.py
tests/unit/app/: __init__.py
